config routes swagger
